Update About Us page with team profiles, mission, and origin story
- Added Ed Casabian profile with biography
- Added Evan Abel profile with biography
- Added mission statement section
- Added 'How We Started' section with origin story
- Included profile photos (ed.jpeg, evan.jpeg)
- Added responsive CSS for mobile devices
- Clean, professional layout with circular profile images

--- a/about-us.html
+++ b/about-us.html
@@ -43,17 +43,60 @@
         <div class="hero-container hero-container-compact">
             <div class="hero-content">
                 <h1 class="hero-title hero-title-compact">About Us</h1>
-                <p class="hero-subtitle hero-subtitle-compact">Coming Soon</p>
+                <p class="hero-subtitle hero-subtitle-compact">Meet the team behind whee!</p>
             </div>
         </div>
     </section>
 
-    <!-- Coming Soon Section -->
+    <!-- Mission Statement Section -->
     <section class="enjoy-section">
         <div class="container">
             <div class="enjoy-content">
-                <h2 class="section-title">Coming Soon</h2>
-                <p class="section-subtitle">We're working on something great. Check back soon to learn more about from0to2!</p>
+                <h2 class="section-title">Our Mission</h2>
+                <p class="section-subtitle" style="font-size: 1.25rem; max-width: 800px; margin: 0 auto;">Whee provides products and services to make cities safer and families' lives more convenient.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Profiles Section -->
+    <section class="enjoy-section" style="padding-top: 0;">
+        <div class="container">
+            <div class="team-profiles" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 3rem; margin-top: 3rem;">
+                <!-- Ed Casabian Profile -->
+                <div class="team-profile" style="text-align: center;">
+                    <div class="profile-image-wrapper" style="margin-bottom: 1.5rem;">
+                        <img src="images/ed.jpeg" alt="Ed Casabian" class="profile-image" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover; margin: 0 auto; display: block; box-shadow: var(--shadow-lg);">
+                    </div>
+                    <h3 class="profile-name" style="font-size: 1.5rem; font-weight: 700; color: var(--primary-color); margin-bottom: 1rem;">Ed Casabian</h3>
+                    <p class="profile-bio" style="color: var(--text-color); line-height: 1.7; max-width: 500px; margin: 0 auto;">
+                        Ed is an operations leader who was an early Uber employee who launched NYC. He then started Climate Draft to create a pathway for skilled talent to apply their skills to meaningful climate companies.
+                    </p>
+                </div>
+
+                <!-- Evan Abel Profile -->
+                <div class="team-profile" style="text-align: center;">
+                    <div class="profile-image-wrapper" style="margin-bottom: 1.5rem;">
+                        <img src="images/evan.jpeg" alt="Evan Abel" class="profile-image" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover; margin: 0 auto; display: block; box-shadow: var(--shadow-lg);">
+                    </div>
+                    <h3 class="profile-name" style="font-size: 1.5rem; font-weight: 700; color: var(--primary-color); margin-bottom: 1rem;">Evan Abel</h3>
+                    <p class="profile-bio" style="color: var(--text-color); line-height: 1.7; max-width: 500px; margin: 0 auto;">
+                        Evan is a mechanical engineer and product designer, who has launched dozens of products at OXO, Doona, Wim... He has an MBA and leads at the intersection of Design, Product, and Operations. He launched Walmart InHome, led New Verticals at The Rounds, and steered CowBell Labs.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How We Started Section -->
+    <section class="enjoy-section" style="background: var(--bg-light); padding: 4rem 0;">
+        <div class="container">
+            <div class="enjoy-content">
+                <h2 class="section-title">How We Started</h2>
+                <div style="max-width: 800px; margin: 2rem auto 0;">
+                    <p style="font-size: 1.1rem; line-height: 1.8; color: var(--text-color); margin-bottom: 1.5rem;">
+                        Ed and Evan were introduced by a friend because of their interest in sustainability. Over months of geeking out about bicycles, and asking questions about why NY wasn't as filled with bikes as they thought it should be, they decided to join forces and help families discover the incredible convenience and daily life change available with a family bike.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
