Fix layout shift with placeholder element for rotating words
- Added invisible placeholder with longest text to maintain container height
- Placeholder uses visibility: hidden to reserve space without showing
- Prevents layout collapse when words transition
- All words remain absolutely positioned for smooth transitions
- Container height now stable throughout all transitions

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <h1 class="hero-title">
                     THE FASTEST WAY TO 
                     <span class="rotating-words">
+                        <span class="rotating-word-placeholder">your best friend's birthday party</span>
                         <span class="rotating-word active">Your happy place</span>
                         <span class="rotating-word">school</span>
                         <span class="rotating-word">the supermarket</span>
